--- a/temp.html
+++ b/temp.html
@@ -118,7 +118,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;margin-top: 20px">
                 <tr>
                     <td bgcolor="#ffffff" align="left">
-                        <img src="https://lifetrusty.s3.eu-west-2.amazonaws.com/logo/LifeTrust+LOGO+OPTIONS-01.jpg" alt="Welcome"  style="display: block; width: 100%; max-width: 50%;">
+                        <img src="https://lifetrusty.s3.eu-west-2.amazonaws.com/logo/LifeTrust+LOGO+OPTIONS-01.jpg" alt="Welcome"  style="display: block; width: 50%; max-width: 50%;margin-left: auto; margin-right: auto">
                     </td>
                 </tr>
             </table>
@@ -143,40 +143,15 @@
 
                 <!-- start copy -->
                 <tr>
-                    <td bgcolor="#ffffff" align="left" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                        <h1 style="margin: 0 0 12px; font-size: 32px; font-weight: 400; line-height: 48px;">Welcome, <span>{{.Name}}</span>   <span>{{.Age}}</span></h1>
-                        <p style="margin: 0;">Thank you for signing up with Paste. We strive to produce high quality email templates that you can use for your transactional or marketing needs.</p>
+                    <td bgcolor="#ffffff" align="left" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; ">
+                        <h1 style="margin: 0 0 12px; font-size: 32px; font-weight: 400; line-height: 48px;">Dear   <script >{{.Name}}   {{.Age}}</script></h1>
+                        <p >Thanks for your interest in LifeTrusty . We appreciate you taking your time to fill the enquiry form . Our medical team will get to you shortly!</p>
+
                     </td>
                 </tr>
                 <!-- end copy -->
 
-                <!-- start button -->
-                <tr>
-                    <td align="left" bgcolor="#ffffff">
-                        <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                            <tr>
-                                <td align="center" bgcolor="#ffffff" style="padding: 12px;">
-                                    <table border="0" cellpadding="0" cellspacing="0">
-                                        <tr>
-                                            <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                                                <a href="https://sendgrid.com" target="_blank" rel="noopener noreferrer" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Do Something Sweet</a>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
-                <!-- end button -->
 
-                <!-- start copy -->
-                <tr>
-                    <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
-                        <p style="margin: 0;">Cheers,<br> Paste</p>
-                    </td>
-                </tr>
-                <!-- end copy -->
 
             </table>
             <!--[if (gte mso 9)|(IE)]>
@@ -201,19 +176,12 @@
                 <!-- start permission -->
                 <tr>
                     <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-                        <p style="margin: 0;">You received this email because we received a request for [type_of_action] for your account. If you didn't request [type_of_action] you can safely delete this email.</p>
+                        <p style="margin: 0;">You received this email because we make enquiry on <span><a  href="https://lifetrusty.com">LifeTrusty</a> </span>platform. If you didn't make any enquiry, you can safely delete this email.</p>
                     </td>
                 </tr>
                 <!-- end permission -->
 
-                <!-- start unsubscribe -->
-                <tr>
-                    <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-                        <p style="margin: 0;">To stop receiving these emails, you can <a href="https://sendgrid.com" target="_blank" rel="noopener noreferrer">unsubscribe</a> at any time.</p>
-                        <p style="margin: 0;">Paste 1234 S. Broadway St. City, State 12345</p>
-                    </td>
-                </tr>
-                <!-- end unsubscribe -->
+
 
             </table>
             <!--[if (gte mso 9)|(IE)]>
