--- a/temp.html
+++ b/temp.html
@@ -4,25 +4,26 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Welcome Email</title>
+    <title>Enquiry Email</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
+
         /**
          * Google webfonts. Recommended to include the .woff version for cross-client compatibility.
          */
         @media screen {
             @font-face {
-                font-family: 'Source Sans Pro';
+                font-family: 'Merriweather';
                 font-style: normal;
                 font-weight: 400;
-                src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/ODelI1aHBYDBqgeIAH2zlBM0YzuT7MdOe03otPbuUS0.woff) format('woff');
+                src: local('Merriweather'), local('Merriweather'), url(http://fonts.gstatic.com/s/merriweather/v8/ZvcMqxEwPfh2qDWBPxn6nmB7wJ9CoPCp9n30ZBThZ1I.woff) format('woff');
             }
 
             @font-face {
-                font-family: 'Source Sans Pro';
+                font-family: 'Merriweather Bold';
                 font-style: normal;
                 font-weight: 700;
-                src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(https://fonts.gstatic.com/s/sourcesanspro/v10/toadOcfmlt9b38dHJxOBGFkQc6VGVFSmCnC_l7QZG60.woff) format('woff');
+                src: local('Merriweather Bold'), local('Merriweather-Bold'), url(http://fonts.gstatic.com/s/merriweather/v8/ZvcMqxEwPfh2qDWBPxn6nhAPw1J91axKNXP_-QX9CC8.woff) format('woff');
             }
         }
 
@@ -102,23 +103,48 @@
     </style>
 
 </head>
-<body style="background-color: #e9ecef;">
 
-<table border="0" cellpadding="0" cellspacing="0" width="100%" style="margin-top: 20px">
+<!-- start body -->
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
 
-
-    <!-- start hero -->
+    <!-- start logo -->
     <tr>
-        <td align="center" bgcolor="#e9ecef">
+        <td align="center">
             <!--[if (gte mso 9)|(IE)]>
-            <table  align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
                 <tr>
                     <td align="center" valign="top" width="600">
             <![endif]-->
-            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;margin-top: 20px">
+            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+                <tr>
+                    <td align="center" valign="top" style="padding: 10px ;">
+                        <a href="https://www.lifetrusty.com/" target="_blank"  style="display: inline-block; ">
+                            <img src="https://lifetrusty.s3.eu-west-2.amazonaws.com/logo/LifeTrust+LOGO+OPTIONS-01.jpg" alt="Logo" style="display: block; height: 100px; width: 100px; max-width: 100px; min-width: 100px;">
+                        </a>
+                    </td>
+                </tr>
+            </table>
+            <!--[if (gte mso 9)|(IE)]>
+            </td>
+            </tr>
+            </table>
+            <![endif]-->
+        </td>
+    </tr>
+    <!-- end logo -->
+
+    <!-- start hero -->
+    <tr>
+        <td align="center" >
+            <!--[if (gte mso 9)|(IE)]>
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
+                <tr>
+                    <td align="center" valign="top" width="600">
+            <![endif]-->
+            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td bgcolor="#ffffff" align="left">
-                        <img src="https://lifetrusty.s3.eu-west-2.amazonaws.com/logo/LifeTrust+LOGO+OPTIONS-01.jpg" alt="Welcome"  style="display: block; width: 50%; max-width: 50%;margin-left: auto; margin-right: auto">
+                        <img src="https://lifetrusty.s3.eu-west-2.amazonaws.com/logo/thanks.jpg" alt="Welcome" width="600" style="display: block; width: 100%; max-width: 100%;">
                     </td>
                 </tr>
             </table>
@@ -133,7 +159,7 @@
 
     <!-- start copy block -->
     <tr>
-        <td align="center" bgcolor="#e9ecef">
+        <td align="center" >
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
                 <tr>
@@ -143,14 +169,10 @@
 
                 <!-- start copy -->
                 <tr>
-                    <td bgcolor="#ffffff" align="left" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; ">
-                        <h1 style="margin: 0 0 12px; font-size: 32px; font-weight: 400; line-height: 48px;">Dear   <script >{{.Name}}   {{.Age}}</script></h1>
-                        <p >Thanks for your interest in LifeTrusty . We appreciate you taking your time to fill the enquiry form . Our medical team will get to you shortly!</p>
-
+                    <td bgcolor="#ffffff" align="left" style="padding: 24px; font-size: 16px; line-height: 24px;">
+                        <p style="font-family: 'Merriweather', serif; margin: 0;">Thank you very much for your interest in LIfeTrusty. We appreciate you taking your time to fill the enquiry form. We have received your enquiry. Our medical team will contact you shortly</p>
                     </td>
                 </tr>
-                <!-- end copy -->
-
 
 
             </table>
@@ -165,7 +187,7 @@
 
     <!-- start footer -->
     <tr>
-        <td align="center" bgcolor="#e9ecef" style="padding: 24px;">
+        <td align="center" style="padding: 24px;">
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
                 <tr>
@@ -175,12 +197,13 @@
 
                 <!-- start permission -->
                 <tr>
-                    <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-                        <p style="margin: 0;">You received this email because we make enquiry on <span><a  href="https://lifetrusty.com">LifeTrusty</a> </span>platform. If you didn't make any enquiry, you can safely delete this email.</p>
+                    <td align="center" bgcolor="#D2C7BA" style="padding: 12px 24px; font-family: 'Merriweather', serif; font-size: 14px; line-height: 20px; color: #666;">
+                        <span style="margin: 0;"> You received this email because we received a request on  </span><a href="https://www.lifetrusty.com" >LifeTrusty</a>
+                        <span style="margin: 0;"> . If you didn't make any request, you can safely delete this email.</span>
+
                     </td>
                 </tr>
                 <!-- end permission -->
-
 
 
             </table>
